написан основной сервис приложения