@@ -1,33 +1,40 @@
 package practicum.service.event;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import practicum.client.StatsClient;
-import practicum.dto.events.*;
+import practicum.dto.events.EventDto;
+import practicum.dto.events.EventDtoIn;
+import practicum.dto.events.EventDtoLight;
 import practicum.dto.mappers.event.EventLightMapper;
 import practicum.dto.mappers.event.EventMapper;
 import practicum.dto.mappers.location.LocationMapper;
 import practicum.dto.mappers.request.RequestMapper;
 import practicum.dto.parameters.EventParam;
-import practicum.dto.parameters.EventParamAdmin;
 import practicum.dto.parameters.EventParamUpdateAdmin;
 import practicum.dto.requests.RequestChangingStatusDto;
 import practicum.dto.requests.RequestDto;
 import practicum.dto.requests.RequestUpdateDto;
 import practicum.exceptions.BadRequestException;
 import practicum.exceptions.ConflictException;
-import practicum.exceptions.ForbiddenException;
 import practicum.exceptions.NotFoundException;
 import practicum.model.*;
 import practicum.repository.*;
+import stats.StatsDto;
+import stats.StatsDtoOut;
 
 import javax.servlet.http.HttpServletRequest;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -39,31 +46,42 @@ public class EventServiceImpl implements EventService {
     private final UserRepository userRepository;
     private final CategoryRepository categoryRepository;
     private final LocationRepository locationRepository;
-    //private final StatServiceImpl statService;
-    private final StatsClient statClient;
+    private final StatsClient statsClient;
+    private final ObjectMapper objectMapper;
     private final EventMapper eventMapper;
     private final EventLightMapper eventLightMapper;
     private final LocationMapper locationMapper;
 
     @Override
-    public List<EventDto> getEventsFromAdmin(EventParamAdmin eventParamAdmin) {
-        Pageable pageable = PageRequest.of(eventParamAdmin.getFrom(), eventParamAdmin.getSize());
-        LocalDateTime start = null;
-        LocalDateTime end = null;
-        if (eventParamAdmin.getRangeStart() != null) {
-            start = LocalDateTime.parse(eventParamAdmin.getRangeStart(), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+    public List<EventDto> getEventsFromAdmin(List<Long> users, List<String> states, List<Long> categories,
+                                             String start, String end, int from, int size) {
+        Pageable pageable = PageRequest.of(from, size);
+        LocalDateTime startTime = null;
+        LocalDateTime endTime = null;
+        List<Event> events;
+        if (start != null) {
+            startTime = LocalDateTime.parse(start, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
         }
-        if (eventParamAdmin.getRangeEnd() != null) {
-            end = LocalDateTime.parse(eventParamAdmin.getRangeEnd(), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+        if (end != null) {
+            endTime = LocalDateTime.parse(end, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
         }
-        List<Event> events = eventRepository.findAllEventsByAdminFilter(
-                eventParamAdmin.getUsers(),
-                eventParamAdmin.getStates(),
-                eventParamAdmin.getCategories(),
-                start,
-                end,
-                pageable
-        );
+        if (start == null && end == null) {
+            events = eventRepository.findAllEventsByAdminFilter(
+                    users,
+                    states,
+                    categories,
+                    pageable
+            );
+        } else {
+            events = eventRepository.findAllEventsByAdminFilter(
+                    users,
+                    states,
+                    categories,
+                    startTime,
+                    endTime,
+                    pageable
+            );
+        }
 
         return events.stream()
                 .map(eventMapper::toDto)
@@ -80,7 +98,7 @@ public class EventServiceImpl implements EventService {
         updatingEvent(event, eventParamUpdateAdmin);
 
         if (!event.getState().equals("PENDING")) {
-            throw new ForbiddenException("Событие не удовлетворяет правилам редактирования");
+            throw new ConflictException("Событие не удовлетворяет правилам редактирования");
         }
         if (eventParamUpdateAdmin.getStateAction() != null) {
 
@@ -151,6 +169,10 @@ public class EventServiceImpl implements EventService {
             throw new ConflictException("Пользователь не является инициатором события");
         }
 
+        if (event.getState().equals("PUBLISHED") && (eventParamUpdateAdmin.getEventDate() != null)) {
+            throw new ConflictException("Попытка изменения опубликованного события");
+        }
+
         if (eventParamUpdateAdmin.getEventDate() != null &&
                 eventParamUpdateAdmin.getEventDate().isBefore(LocalDateTime.now().plusHours(2))) {
             throw new BadRequestException("Неверная дата события");
@@ -209,14 +231,17 @@ public class EventServiceImpl implements EventService {
         List<Request> requests = requestRepository.findAllById(requestUpdateDto.getRequestIds());
 
         for (Request r : requests) {
+            if (r.getStatus().equals("CONFIRMED") && status.equals("REJECTED")) {
+                throw new ConflictException("Заявка на участие уже принята");
+            }
             r.setStatus(status);
             requestRepository.save(r);
         }
 
-        List<RequestDto> confirmedRequests = requestRepository.findByStatus("CONFIRMED").stream()
+        List<RequestDto> confirmedRequests = requestRepository.findByStatusOrderByIdDesc("CONFIRMED").stream()
                 .map(RequestMapper::toRequestDto)
                 .collect(Collectors.toList());
-        List<RequestDto> rejectedRequests = requestRepository.findByStatus("REJECTED").stream()
+        List<RequestDto> rejectedRequests = requestRepository.findByStatusOrderByIdDesc("REJECTED").stream()
                 .map(RequestMapper::toRequestDto)
                 .collect(Collectors.toList());
 
@@ -226,21 +251,54 @@ public class EventServiceImpl implements EventService {
     @Override
     public List<EventDtoLight> getAllEvent(EventParam eventParam, HttpServletRequest request) {
         Pageable pageable = PageRequest.of(eventParam.getFrom(), eventParam.getSize());
-        List<Event> events = eventRepository.findAllEventsByFilter(eventParam.getText(),
-                eventParam.getCategories(),
-                eventParam.getPaid(),
-                eventParam.getRangeStart(),
-                eventParam.getRangeEnd(),
-                eventParam.getOnlyAvailable(),
-                pageable);
+        LocalDateTime start = null;
+        LocalDateTime end = null;
+        List<Event> events;
 
-        //statService.addHits(request);
+        statsClient.saveStats(new StatsDto("ewm-main-service",
+                request.getRequestURI(),
+                request.getRemoteAddr(),
+                LocalDateTime.now()));
 
-        return events.stream()
+        if (eventParam.getRangeStart() != null) {
+            start = LocalDateTime.parse(eventParam.getRangeStart(), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+        }
+        if (eventParam.getRangeEnd() != null) {
+            end = LocalDateTime.parse(eventParam.getRangeEnd(), DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
+        }
+        if (start != null && start.isAfter(end)) {
+            throw new BadRequestException("RangeStart должен быть раньше чем rangeEnd");
+        }
+        if (start == null && end == null) {
+            events = eventRepository.findAllEventsByFilter(eventParam.getText(),
+                    eventParam.getCategories(),
+                    eventParam.getPaid(),
+                    eventParam.getOnlyAvailable(),
+                    pageable);
+        } else {
+            events = eventRepository.findAllEventsByFilter(eventParam.getText(),
+                    eventParam.getCategories(),
+                    eventParam.getPaid(),
+                    start,
+                    end,
+                    eventParam.getOnlyAvailable(),
+                    pageable);
+        }
+
+        List<EventDtoLight> eventsDto = events.stream()
                 .map(eventLightMapper::toDto)
                 .peek(eventDto -> eventDto.setConfirmedRequests(
                         requestRepository.countByEventIdAndStatus(eventDto.getId(), "CONFIRMED")))
                 .collect(Collectors.toList());
+
+        Map<Long, Integer> viewStatsMap = getViewsEvents(events);
+
+        for (EventDtoLight e : eventsDto) {
+            Integer views = viewStatsMap.getOrDefault(e.getId(), 0);
+            e.setViews(views);
+        }
+
+        return eventsDto;
     }
 
     @Override
@@ -248,14 +306,18 @@ public class EventServiceImpl implements EventService {
         Event event = eventRepository.findById(eventId)
                 .orElseThrow(() -> new NotFoundException("Событие не найдено или недоступно"));
 
+        statsClient.saveStats(new StatsDto("ewm-main-service",
+                request.getRequestURI(),
+                request.getRemoteAddr(),
+                LocalDateTime.now()));
+
         if (!event.getState().equals("PUBLISHED")) {
             throw new NotFoundException("Событие не опубликовано");
         }
 
-        //statService.toView(Collections.emptyList());
-        //statService.addHits(request);
-
-        return eventMapper.toDto(event);
+        EventDto eventDto = eventMapper.toDto(event);
+        eventDto.setViews(getViewsEvents(List.of(event)).getOrDefault(event.getId(), 0));
+        return eventDto;
     }
 
     private Event addNewEvent(EventDtoIn eventDtoIn, Category category, Location location) {
@@ -263,15 +325,15 @@ public class EventServiceImpl implements EventService {
             throw new BadRequestException("Неверная дата события");
         }
         return new Event(eventDtoIn.getAnnotation(),
-                            category,
-                            eventDtoIn.getDescription(),
-                            eventDtoIn.getEventDate(),
-                            location,
-                            eventDtoIn.isPaid(),
-                            eventDtoIn.getParticipantLimit(),
-                            eventDtoIn.isRequestModeration(),
-                            eventDtoIn.getTitle()
-                    );
+                category,
+                eventDtoIn.getDescription(),
+                eventDtoIn.getEventDate(),
+                location,
+                eventDtoIn.isPaid(),
+                eventDtoIn.getParticipantLimit(),
+                eventDtoIn.isRequestModeration(),
+                eventDtoIn.getTitle()
+        );
     }
 
     private Event updatingEvent(Event event, EventParamUpdateAdmin updateEvent) {
@@ -290,7 +352,7 @@ public class EventServiceImpl implements EventService {
             if (updateEvent.getEventDate().isBefore(LocalDateTime.now().plusHours(2))) {
                 throw new BadRequestException("Некорректная дата");
             }
-                event.setEventDate(updateEvent.getEventDate());
+            event.setEventDate(updateEvent.getEventDate());
         }
         if (updateEvent.getLocationDto() != null) {
             event.setLocation(locationMapper.fromDto(updateEvent.getLocationDto()));
@@ -308,5 +370,34 @@ public class EventServiceImpl implements EventService {
             event.setTitle(updateEvent.getTitle());
         }
         return event;
+    }
+
+    private Map<Long, Integer> getViewsEvents(List<Event> events) {
+        List<String> uris = events.stream()
+                .map(event -> String.format("/events/%s", event.getId()))
+                .collect(Collectors.toList());
+
+        List<LocalDateTime> startDates = events.stream()
+                .map(Event::getCreatedOn)
+                .collect(Collectors.toList());
+        LocalDateTime earliestDate = startDates.stream()
+                .min(LocalDateTime::compareTo)
+                .orElse(null);
+        Map<Long, Integer> viewStatsMap = new HashMap<>();
+
+        if (earliestDate != null) {
+            ResponseEntity<Object> response = statsClient.getStats(earliestDate, LocalDateTime.now(),
+                    uris, true);
+
+            List<StatsDtoOut> viewStatsList = objectMapper.convertValue(response.getBody(), new TypeReference<>() {
+            });
+
+            viewStatsMap = viewStatsList.stream()
+                    .filter(statsDtoOut -> statsDtoOut.getUri().startsWith("/events/"))
+                    .collect(Collectors.toMap(
+                            statsDto -> Long.parseLong(statsDto.getUri().substring("/events/".length())),
+                            StatsDtoOut::getHits));
+        }
+        return viewStatsMap;
     }
 }
